# clutter-gtk

./: Makefile  README.md  clutter-gtk.spec
src/: Makefile.am  Makefile.in  NEWS  README  aclocal.m4  clutter-gtk.pc.in  config.h.in  configure  configure.ac  meson.build  meson_options.txt
src/clutter-gtk/: Makefile.am  Makefile.in  clutter-gtk.h  gtk-clutter-actor-internal.h  gtk-clutter-actor.c  gtk-clutter-actor.h  gtk-clutter-embed.c  gtk-clutter-embed.h  gtk-clutter-offscreen.c  gtk-clutter-offscreen.h  gtk-clutter-scrollable.c  gtk-clutter-scrollable.h  gtk-clutter-texture.c  gtk-clutter-texture.h  gtk-clutter-util.c  gtk-clutter-util.h  gtk-clutter-version.h  gtk-clutter-version.h.in  gtk-clutter-viewport.c  gtk-clutter-viewport.h  gtk-clutter-window.c  gtk-clutter-window.h  gtk-clutter-zoomable.c  gtk-clutter-zoomable.h  meson.build
src/doc/: Makefile.am  Makefile.in  clutter-gtk-1.0-docs.xml  clutter-gtk-1.0-sections.txt  meson.build
src/doc/html/: GtkClutterActor.html  GtkClutterEmbed.html  GtkClutterWindow.html  annotation-glossary.html  ch01.html  ch02.html  ch03.html  clutter-gtk-1.0-Utility-Functions.html  clutter-gtk-1.0.devhelp2  cluttergtk-glossary.html  cluttergtk-object-hierarchy.html  cluttergtk-object-index.html  cluttergtk-objects.html  index.html  ix01.html  ix02.html  license.html
src/doc/reference/: Makefile.am  Makefile.in  clutter-gtk-1.0-docs.xml  clutter-gtk-1.0.types  clutter-gtk-docs.xml  clutter-gtk-sections.txt  clutter-gtk.types
src/doc/reference/html/: GtkClutterActor.html  GtkClutterEmbed.html  GtkClutterScrollable.html  GtkClutterViewport.html  GtkClutterWindow.html  GtkClutterZoomable.html  annotation-glossary.html  ch01.html  ch02.html  ch03.html  clutter-gtk-1.0-Utility-Functions.html  clutter-gtk-1.0.devhelp2  clutter-gtk-Utility-Functions.html  cluttergtk-glossary.html  cluttergtk-object-hierarchy.html  cluttergtk-object-index.html  cluttergtk-objects.html  index.html  index.sgml  ix01.html  ix02.html  ix03.html  ix04.html  ix05.html  ix06.html  ix07.html  license.html
src/doc/reference/tmpl/: gtk-clutter-embed.sgml  gtk-clutter-scrollable.sgml  gtk-clutter-util.sgml  gtk-clutter-viewport.sgml  gtk-clutter-zoomable.sgml
src/doc/reference/xml/: annotation-glossary.xml  api-index-0.10.xml  api-index-0.6.xml  api-index-0.8.2.xml  api-index-0.8.xml  api-index-1.0.xml  api-index-deprecated.xml  api-index-full.xml  gtk-clutter-embed.xml  gtk-clutter-scrollable.xml  gtk-clutter-util.xml  gtk-clutter-viewport.xml  gtk-clutter-zoomable.xml
src/doc/xml/: meson.build
src/examples/: Makefile.am  Makefile.in  gtk-clutter-events.c  gtk-clutter-multistage.c  gtk-clutter-test-actor.c  gtk-clutter-test-scroll.c  gtk-clutter-test.c  gtk-clutter-viewport.c  gtk-clutter-window-test.c  gtk-clutter-window-test2.c  meson.build
src/po/: LINGUAS  Makevars  POTFILES.in  cluttergtk-1.0.pot  ja.gmo  ja.po  meson.build  pl.gmo  pl.po  zh_CN.gmo  zh_CN.po
